--- a/unplugged/about/index.html
+++ b/unplugged/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>About Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,12 +18,6 @@
 </head>
 
 <body>
-  <!--[if IE]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
-
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="../js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
@@ -36,6 +30,81 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
-</body>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="../index.html" target="_blank">Homepage</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="mission">
+      <div class="content-wrapper">
+        <h2>Our Mission - want to make you the team you always wanted to be.</h2>
+        <div class="mission-content">
+          <p>One of the most important features of this page is the map, which is prominently featured in the middle of the page. You'll be adding your Google Map later but for now, let's go ahead and add a placeholder for it. Simply create a section and give it a good, semantic class name like "map".
+            <br>
+            One of the most important features of this page is the map, which is prominently featured in the middle of the page. You'll be adding your Google Map later but for now, let's go ahead and add a placeholder for it. Simply create a section and give it a good, semantic class name like "map".</p>
+        </div>
+      </div> <!-- mission content wrapper ends -->
+    </section> <!-- Contact Info -->
+    <section class="map">
+      <div class="content-wrapper">
+      <figure>
+      </figure>
+    </div>
+  </section>
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this.</h2>
+        <address class="contact-content">
+        <div class="general-information">
+          <h4> General Information</h4>
+          <p> 333 Main St. Lake geneva, Wi, 53147
+            <br>555-555-5555
+            <br>hello@unplugged.com</p>
+          </div>
+            <div class="facilitator-chat">
+            <h4> Chat with a Facilitator</h4>
+            <p>555-555-5556
+              <br>facilitator@unplugged.com</p>
+          </div>
+        </address>
+      </div>
+    </section>
+
+  </main>    <!-- main wrapper -->
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <address class="contact">
+          <h4> Contact </h4>
+          <p>555-555-5555
+            <br>
+           hello@unplugged.com
+          </p>
+        </address>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+            <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+            <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
+            <!-- other social links here -->
+          </div>
+        </div>
+      </div> <!--footer content ends -->
+    </div> <!-- footer content-wrapper ends-->
+
+    <div class="copyright">
+      <p>Copyright 2019 | Unplugged </p>
+    </div>
+  </footer>
+  </body>
 
 </html>
