--- a/unplugged/faq/index.html
+++ b/unplugged/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged FAQ</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,12 +18,6 @@
 </head>
 
 <body>
-  <!--[if IE]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
-
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="../js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
@@ -36,6 +30,71 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="../about/index.html" target="_blank">About</a></li>
+          <li><a href="../index.html" target="_blank">Homepage</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+  <section class="faq">
+    <div class="content-wrapper">
+      <h2>Frequently Asked Questions</h2>
+      <div class="faq-content">
+        <h4>How do I get to the Unplugged retreat?</h4>
+        <p>The last thing you need to do is to code your FAQ page. Our FAQ page is pretty simple and is very similar to our About page so let's copy the code that we used on that page and then go through and tweak what we need!</p>
+      </div>
+      <div class="faq-content">
+        <h4>What kind of team is right for the Unplugged retreat?</h4>
+        <p>The last thing you need to do is to code your FAQ page. Our FAQ page is pretty simple and is very similar to our About page so let's copy the code that we used on that page and then go through and tweak what we need!</p>
+      </div>
+      <div class="faq-content">
+        <h4>What size team can you accommodate?</h4>
+        <p>The last thing you need to do is to code your FAQ page. Our FAQ page is pretty simple and is very similar to our About page so let's copy the code that we used on that page and then go through and tweak what we need!</p>
+      </div>
+      <div class="faq-content">
+        <h4>Is there really no wifi available?</h4>
+        <p>The last thing you need to do is to code your FAQ page. Our FAQ page is pretty simple and is very similar to our About page so let's copy the code that we used on that page and then go through and tweak what we need!</p>
+      </div>
+    </div> <!-- faq content wrapper ends -->
+  </section> <!-- FAQ Info -->
+
+
+</main>    <!-- main wrapper -->
+<footer>
+  <div class="content-wrapper">
+    <div class="footer-content">
+      <address class="contact">
+        <h4> Contact </h4>
+        <p>555-555-5555
+          <br>
+         hello@unplugged.com
+        </p>
+      </address>
+      <div class="social">
+        <h4>Social</h4>
+        <div class="social-icons">
+          <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+          <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+          <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
+          <!-- other social links here -->
+        </div>
+      </div>
+    </div> <!--footer content ends -->
+  </div> <!-- footer content-wrapper ends-->
+
+  <div class="copyright">
+    <p>Copyright 2019 | Unplugged </p>
+  </div>
+</footer>
+
+
 </body>
 
 </html>
