--- a/unplugged/index.html
+++ b/unplugged/index.html
@@ -58,7 +58,7 @@
       <div class="content-wrapper">
         <div class="form-description">
           <h3> Want to join the next retreat?</h3>
-          <p> find out when we are holding our next retreat and how your company or team can sign up!</p>
+          <p> Find out when we are holding our next retreat and how your company or team can sign up!</p>
         </div>
         <div class="form">
           <h3> Find out more</h3>
@@ -67,17 +67,65 @@
         </div>
       </div> <!-- content-wrapper ends-->
     </aside>
+    <section class="features">
+      <!-- Add your Features content here -->
+      <div class="features-items">
+        <h2>Have the work week you always dreamed of - without the bad wifi. </h2>
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-desciption"> Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+        </article>
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-desciption">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+        </article>
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-desciption">Private chef team providing on demand meals - just like your team kitchen.</p>
+        </article>
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-desciption">5 outdoor obstacle courses, including private beach &#189; mile from bungalow.</p>
+        </article>
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-desciption">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+        </article>
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-desciption">Dedicated computer room for times that you must wifi.</p>
+        </article>
+      </div>
+    </section>
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like this one.</h2>
+        <article>
+          <div class="first-review">
+            <h3>LaCrue Bottling Co. October 2018</h3>
+            <p>Now that you have your base HTML code, go through all your sections and divs and make sure they have class names as needed. This makes it so much quicker to find and style specific parts of your page later. Whenever possible, try to use the same naming as our code. That will make checking your work against ours a lot easier!</p>
+          </div>
+      </article>
+      </div>
+    </section>
   </main>    <!-- main wrapper -->
 
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
         <address class="contact">
-
+          <h4> Contact </h4>
+          <p>555-555-5555
+            <br>
+           hello@unplugged.com
+          </p>
         </address>
         <div class="social">
+          <h4>Social</h4>
           <div class="social-icons">
             <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+            <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+            <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
             <!-- other social links here -->
           </div>
         </div>
@@ -85,6 +133,7 @@
     </div> <!-- footer content-wrapper ends-->
 
     <div class="copyright">
+      <p>Copyright 2019 | Unplugged </p>
     </div>
   </footer>
 </body>
