--- a/unplugged/about/index.html
+++ b/unplugged/about/index.html
@@ -47,9 +47,8 @@
       <div class="content-wrapper">
         <h2>Our Mission - want to make you the team you always wanted to be.</h2>
         <div class="mission-content">
-          <p>One of the most important features of this page is the map, which is prominently featured in the middle of the page. You'll be adding your Google Map later but for now, let's go ahead and add a placeholder for it. Simply create a section and give it a good, semantic class name like "map".
-            <br>
-            One of the most important features of this page is the map, which is prominently featured in the middle of the page. You'll be adding your Google Map later but for now, let's go ahead and add a placeholder for it. Simply create a section and give it a good, semantic class name like "map".</p>
+          <p>One of the most important features of this page is the map, which is prominently featured in the middle of the page. You'll be adding your Google Map later but for now, let's go ahead and add a placeholder for it. Simply create a section and give it a good, semantic class name like "map".</p>
+          <p>One of the most important features of this page is the map, which is prominently featured in the middle of the page. You'll be adding your Google Map later but for now, let's go ahead and add a placeholder for it. Simply create a section and give it a good, semantic class name like "map".</p>
         </div>
       </div> <!-- mission content wrapper ends -->
     </section> <!-- Contact Info -->
