--- a/unplugged/index.html
+++ b/unplugged/index.html
@@ -38,7 +38,9 @@
   <script src="https://www.google-analytics.com/analytics.js" async></script>
   <header>
     <div class="content-wrapper">
+      <figure>
       <a href="#"><img src="" alt="unplugged logo"></a>
+    </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -52,6 +54,9 @@
     <section class="hero-area">
       <div class="content-wrapper">
         <h1> Retreat from the desk, return refreshed.</h1>
+    <!--  <figure>
+          <img src="img/hero-image.jpg" alt="hero image"></a>
+        </figure>-->
 
       </div>
     </section>
@@ -102,6 +107,9 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
         <article>
+          <figure>
+              <img src="img/review-img.jpg">
+          </figure>
           <div class="first-review">
             <h3>LaCrue Bottling Co. October 2018</h3>
             <p>Now that you have your base HTML code, go through all your sections and divs and make sure they have class names as needed. This makes it so much quicker to find and style specific parts of your page later. Whenever possible, try to use the same naming as our code. That will make checking your work against ours a lot easier!</p>
