--- a/unplugged/about/index.html
+++ b/unplugged/about/index.html
@@ -56,7 +56,7 @@
     <section class="map">
       <div class="content-wrapper">
       <figure>
-        <div class="map-container"
+        <div class="map-container">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28011.4430432047!2d153.58538667312894!3d-28.646829461975514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b9063d10495940f%3A0x3d875a515b833528!2sCape%20Byron%20Lighthouse!5e0!3m2!1sen!2sau!4v1573167741426!5m2!1sen!2sau" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
       </div>
       </figure>
