--- a/unplugged/index.html
+++ b/unplugged/index.html
@@ -14,7 +14,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-
+  <!-- FontAwesome CDN version 5.5 -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -78,27 +79,27 @@
       <div class="features-items">
         <h2>Have the work week you always dreamed of - without the bad wifi. </h2>
         <article>
-          <p class="fontawesome-icon"></p>
+          <p class="fontawesome-icon"><i class="fas fa-campground"></i></p>
           <p class="features-item-desciption"> Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
         </article>
         <article>
-          <p class="fontawesome-icon"></p>
+          <p class="fontawesome-icon"><i class="fas fa-bed"></i></p>
           <p class="features-item-desciption">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
         </article>
         <article>
-          <p class="fontawesome-icon"></p>
+          <p class="fontawesome-icon"><i class="fas fa-utensils"></i></p>
           <p class="features-item-desciption">Private chef team providing on demand meals - just like your team kitchen.</p>
         </article>
         <article>
-          <p class="fontawesome-icon"></p>
+          <p class="fontawesome-icon"><i class="fas fa-shoe-prints"></i></p>
           <p class="features-item-desciption">5 outdoor obstacle courses, including private beach &#189; mile from bungalow.</p>
         </article>
         <article>
-          <p class="fontawesome-icon"></p>
+          <p class="fontawesome-icon"><i class="fas fa-smile"></i></p>
           <p class="features-item-desciption">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
         </article>
         <article>
-          <p class="fontawesome-icon"></p>
+          <p class="fontawesome-icon"><i class="fas fa-wifi"></i></p>
           <p class="features-item-desciption">Dedicated computer room for times that you must wifi.</p>
         </article>
       </div>
