--- a/unplugged/about/index.html
+++ b/unplugged/about/index.html
@@ -36,12 +36,12 @@
   <script src="https://www.google-analytics.com/analytics.js" async></script>
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="../index.html"><img src="../img/logo.png" alt="unplugged logo"></a>
       <div class="header-divider"></div>
       <nav>
         <ul>
           <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="../index.html" target="_blank">Homepage</a></li>
+          <li><a href="../about/index.html" target="_blank">About</a></li>
         </ul>
       </nav>
     </div>
