--- a/unplugged/index.html
+++ b/unplugged/index.html
@@ -40,7 +40,7 @@
   <header>
     <div class="content-wrapper">
       <figure>
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="#"><img src="img/logo.png" alt="unplugged logo"></a>
     </figure>
       <div class="header-divider"></div>
       <nav>
@@ -133,9 +133,9 @@
         <div class="social">
           <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
-            <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
-            <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
+            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a><i class="fab fa-facebook"></i></p>
+            <p><a href="https://www.instagram.com/yoursite" target="_blank"></a><i class="fab fa-instagram"></i></p>
+            <p><a href="https://www.twitter.com/yoursite" target="_blank"></a><i class="fab fa-twitter"></i></p>
             <!-- other social links here -->
           </div>
         </div>
